# UGent-7

./: .dev.env  .env  .gitignore  .prod.env  .tool-versions  README.md  development.sh  development.yml  package-lock.json  production.yml  reload_fixtures.sh  test.sh  test.yml  testing.yml
backend/: .coverage  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  data_dump.json  db.sqlite3-shm  gunicorn_config.py  manage.py  pyproject.toml  reload_fixtures.sh  requirements.txt  setup.sh  tmp.py
backend/.github/workflows/: backend-tests.yaml
backend/api/: apps.py  serializers.py  signals.py  urls.py
backend/api/fixtures/: admins.yaml  assistants.yaml  checks.yaml  courses.yaml  groups.yaml  projects.yaml  students.yaml  submissions.yaml  teachers.yaml
backend/api/helpers/: check_folder_structure.py
backend/api/logic/: check_folder_structure.py  get_file_path.py  parse_zip_files.py  run_extra_checks.py
backend/api/migrations/: 0001_alter_project_course.py  0001_initial.py  0002_delete_admin.py  0002_populate.py  0002_project_group_size_project_max_score.py  0003_remove_project_checks_extracheck_structurecheck_and_more.py  0004_submission_structure_checks_passed_extrachecksresult.py  0019_feedback.py  (+35 more)
backend/authentication/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/checks/: apps.py
backend/logic/: apps.py  urls.py
backend/notifications/: apps.py  logic.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/ypovoli/: asgi.py  celery.py  handlers.py  settings.py  urls.py  wsgi.py
(+491 files in other folders)
